Consolidate form styles & fix footer spacing

--- a/public/call/new/sass/_form.scss
+++ b/public/call/new/sass/_form.scss
@@ -21,19 +21,17 @@ div#form_container {
 					font-size: 0.75em;
 				}
 				input {	  
+				border: 1px solid $form_border_color;
+				border-radius: 3px;
 					&[type="text"] {
 						width: 100%;
 						height: 3em;
 						line-height: 2em;
-						border-radius: 3px;
-						border: 1px solid $form_border_color;
 						padding: 0.5em;
 					}
 					&[type="submit"] {
 						width: 100%;
-						border-radius: 3px;
 						text-align: center;
-						border: 1px solid $form_border_color;
 						height: 2em;
 						font-size: 1em;
 						background-color: $form_button_color;
