--- a/public/call/new/sass/_layout.scss
+++ b/public/call/new/sass/_layout.scss
@@ -74,7 +74,7 @@ div#content {
   
 div#footer{
   clear: both;
-  padding: 0 5%;
+  padding: 1em 5% 0 5%;
   div#partner_logos {
 
 		display: flex;
