--- a/public/call/new/style/style.css
+++ b/public/call/new/style/style.css
@@ -48,7 +48,7 @@ div#content {
 
 div#footer {
   clear: both;
-  padding: 0 5%; }
+  padding: 1em 5% 0 5%; }
   div#footer div#partner_logos {
     display: flex;
     flex-direction: row;
@@ -68,24 +68,23 @@ div#form_container form#caller_data ul#main_form_elements {
     margin-bottom: .5em; }
     div#form_container form#caller_data ul#main_form_elements li label#sms_opt_in_label {
       font-size: 0.75em; }
-    div#form_container form#caller_data ul#main_form_elements li input[type="text"] {
-      width: 100%;
-      height: 3em;
-      line-height: 2em;
-      border-radius: 3px;
+    div#form_container form#caller_data ul#main_form_elements li input {
       border: 1px solid #aaa;
-      padding: 0.5em; }
-    div#form_container form#caller_data ul#main_form_elements li input[type="submit"] {
-      width: 100%;
-      border-radius: 3px;
-      text-align: center;
-      border: 1px solid #aaa;
-      height: 2em;
-      font-size: 1em;
-      background-color: #bbb;
-      transition: all .1s linear; }
-    div#form_container form#caller_data ul#main_form_elements li input[type="submit"]:hover {
-      background-color: #ccc; }
+      border-radius: 3px; }
+      div#form_container form#caller_data ul#main_form_elements li input[type="text"] {
+        width: 100%;
+        height: 3em;
+        line-height: 2em;
+        padding: 0.5em; }
+      div#form_container form#caller_data ul#main_form_elements li input[type="submit"] {
+        width: 100%;
+        text-align: center;
+        height: 2em;
+        font-size: 1em;
+        background-color: #bbb;
+        transition: all .1s linear; }
+      div#form_container form#caller_data ul#main_form_elements li input[type="submit"]:hover {
+        background-color: #ccc; }
 
 div#header {
   background-color: #c869bf;
